# bad-snakes-icse23-artifacts

./: README.md  STATUS  pyproject.toml
notebooks/: Download-packages-artifacts.ipynb  Downloading-packages.ipynb  Uncompressing-packages_artifacts.ipynb  Untitled.ipynb  bandit4mal-analysis.ipynb  getting-random-packages.ipynb  helpers.ipynb  oss-detect-backdoor-analysis.ipynb  ossf-package-analysis-analysis.ipynb  pypi-malware-checks-analysis.ipynb  selecting-top-dependents-packages.ipynb  selecting-top-downloaded-packages.ipynb  subpatterns-analysis.ipynb  uncompressing_packages_artifacts.ipynb
notebooks/.ipynb_checkpoints/: Downloading-packages-checkpoint.ipynb  Extracting-top-pypi-packages-by-dependents-checkpoint.ipynb  downloading-packages-checkpoint.ipynb  malicious-packages-analysis-checkpoint.ipynb  oss-detect-backdoor-analysis-checkpoint.ipynb  pypi-malware-checks-analysis-checkpoint.ipynb  selecting-top-downloaded-packages-checkpoint.ipynb
packages_names/: malicious-packages.csv  popular-packages.csv  random-packages.csv
src/: run_oss_detect_backdoor.py
