[tool.poetry]
name = "bad-snakes"
version = "0.1.0"
description = ""
authors = ["lyvd <vuducly151092@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
notebook = "^6.4.12"
pandas = "^1.4.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
python-magic = "^0.4.27"
matplotlib = "^3.5.2"
yara-scanner = "^2.0.3"
memory-profiler = "^0.60.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
